# aiprogrammer

./: AGENTS.md  README.md
2015/: README.md
2016/: README.md
2017/: README.md
2018/: README.md
2019/: README.md
2020/: README.md
2021/: README.md
2026/08/_code/: Cargo.toml
202603/: README.md  article1.md  article10.md  article2.md  article3.md  article4.md  article5.md  article6.md  article7.md  article8.md  article9.md  focus.md  history.md
202604/: article2.md  article3.md  article4.md  article8.md  article9.md  articles.md  end.md  focus7.md
202605/: README.md  article4.md  article8.md  articles.md  focus2.md  focus5.md  focus7.md  news.md
202606/: README.md  article2.md  article3.md  article4.md  article5.md  article7.md  focus6.md  focus_code.md
202607/: article1.md  article5.md  article8.md  focus5.md  focus7.md
202608/: README.md  article5.md  focus5.md  focus7.md  focus_code.md
202609/: article10.md  article3.md  article6.md  focus.md  focus4.md  focus6.md  focus_code.md  news.md
202610/: article1.md  article5.md  article7.md  articles.md  focus1.md  focus4.md  focus5.md  focus_code.md
202611/: article1.md  article2.md  article4.md  article7.md  articles.md  focus1.md  focus3.md  focus6.md  news.md
202612/: article10.md  article9.md  focus1.md  focus3.md  focus5.md
202701/: article1.md  article2.md  article7.md  focus7.md
202702/: article4.md  article8.md  focus.md  focus3.md  focus4.md  focus5.md  focus7.md  focus_code.md
202703/: README.md  article5.md  article7.md  article8.md  article9.md  end.md  focus2.md
(+5179 files in other folders)
